NIFI-15946 Renamed variable jsonFile to yamlFile.